--- a/home/nit/hypr/hyprland/hyprland.conf
+++ b/home/nit/hypr/hyprland/hyprland.conf
@@ -107,7 +107,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
+    enabled = false
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -187,7 +187,7 @@ device {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+#windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 exec-once=bash ~/.config/hypr/start.sh
 
 ####################
@@ -204,10 +204,10 @@ bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
 bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+#bind = $mainMod, 7, workspace, 7
+#bind = $mainMod, 8, workspace, 8
+#bind = $mainMod, 9, workspace, 9
+#bind = $mainMod, 0, workspace, 10
 
 bind = $mainMod, KP_End,    workspace, 1
 bind = $mainMod, KP_Down,   workspace, 2
@@ -215,10 +215,10 @@ bind = $mainMod, KP_Next,   workspace, 3
 bind = $mainMod, KP_Left,   workspace, 4
 bind = $mainMod, KP_Begin,  workspace, 5
 bind = $mainMod, KP_Right,  workspace, 6
-bind = $mainMod, KP_Home,   workspace, 7
-bind = $mainMod, KP_Up,     workspace, 8
-bind = $mainMod, KP_Prior,  workspace, 9
-bind = $mainMod, KP_Insert, workspace, 10
+#bind = $mainMod, KP_Home,   workspace, 7
+#bind = $mainMod, KP_Up,     workspace, 8
+#bind = $mainMod, KP_Prior,  workspace, 9
+#bind = $mainMod, KP_Insert, workspace, 10
 
 bind = ALT, Tab, cyclenext
 bind = ALT SHIFT, Tab, cyclenext, prev
@@ -234,10 +234,10 @@ bind = $mainMod SHIFT, KP_Next, movetoworkspace, 3
 bind = $mainMod SHIFT, KP_Left, movetoworkspace, 4
 bind = $mainMod SHIFT, KP_Begin, movetoworkspace, 5
 bind = $mainMod SHIFT, KP_Right, movetoworkspace, 6
-bind = $mainMod SHIFT, KP_Home, movetoworkspace, 7
-bind = $mainMod SHIFT, KP_Up, movetoworkspace, 8
-bind = $mainMod SHIFT, KP_Prior, movetoworkspace, 9
-bind = $mainMod SHIFT, KP_Insert, movetoworkspace, 10
+#bind = $mainMod SHIFT, KP_Home, movetoworkspace, 7
+#bind = $mainMod SHIFT, KP_Up, movetoworkspace, 8
+#bind = $mainMod SHIFT, KP_Prior, movetoworkspace, 9
+#bind = $mainMod SHIFT, KP_Insert, movetoworkspace, 10
 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
@@ -329,22 +329,25 @@ bind = $mainMod, B, exec, ls -d */ | rofi -dmenu -i | xargs -I{} $fileManager $H
 
 
 # Auto-assign workspaces
-windowrule = workspace 1, class:^(zen-browser)$
-windowrule = workspace 2, class:^(obsidian)$
-windowrule = workspace 3, class:^(zed-editor)$
-windowrule = workspace 3, class:^(vscodium)$
-windowrule = workspace 4, class:^(vesktop)$
-windowrule = workspace 4, class:^(ferdium)$
-windowrule = workspace 5, class:^(spotify)$
-windowrule = workspace 6, class:^(lutris)$
-windowrule = workspace 7, class:^(thunar)$
-windowrule = workspace 9, class:^(kitty)$
 
+
+windowrule = workspace 0, match:class ^pulseeffects
+windowrule = workspace 1, match:class ^(zen-browser)$
+windowrule = workspace 2, match:class ^(obsidian)$
+windowrule = workspace 3, match:class ^(kitty)$
+windowrule = workspace 3, match:class ^(zed-editor)$
+windowrule = workspace 3, match:class ^(vscodium)$
+windowrule = workspace 4, match:class ^(vesktop)$
+windowrule = workspace 4, match:class ^(ferdium)$
+windowrule = workspace 5, match:class ^(spotify)$
+windowrule = workspace 6, match:class ^(lutris)$
+windowrule = workspace 6, match:class ^(thunar)$
 # eww bar
-layerrule = blur, ^eww-bar$
-layerrule = ignorezero, ^eww-bar$
-windowrulev2 = float, class:^(eww)$
-windowrulev2 = pin, class:^(eww)
+#layerrule = blur, match:class ^eww-bar$
+#layerrule = ignorezero, match:class ^eww-bar$
+#windowrulev2 = float, match:class ^(eww)$
+#windowrulev2 = pin, mathc:class ^(eww)
+
 
 # gammastep
 bind = $mainMod SHIFT, 1, exec, pkill gammastep; gammastep -m wayland -O 2500K
